Got placehoder images for clients

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="navbar-brand" href="#">SX Link</a>
         </div>
         <div>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav nav-pills navbar-right">
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -41,11 +41,37 @@
     <div class="jumbotron">
     	<br><br><br><br><br><br><br><br><br><br>
 		<center><h2>BRINGING STUDENTS AND STARTUPS TOGETHER</h2></center>
-		<br><br><br><br><br>
+		<br><br><br><br>
 		<center><button class="btn btn-primary">SIGN ME UP</button></center>
-    	<br><br><br><br><br><br><br><br><br><br>
+    	<br><br><br><br><br><br><br><br><br><br><br>
     </div>
 
+    <!-- <div class="center"> -->
+	    <div class="container">
+	    	<div class="row">
+	    		<div class="col-xs-6 col-sm-6 col-md-3">
+	    			<a href="#" class="thumbnail">
+	    				<img src="images/tinderlogo.jpeg">
+	    			</a>
+	    		</div>
+	    		<div class="col-xs-6 col-sm-6 col-md-3">
+	    			<a href="#" class="thumbnail">
+	    				<img src="images/tinderlogo.jpeg">
+	    			</a>
+	    		</div>
+	    		<div class="col-xs-6 col-sm-6 col-md-3">
+	    			<a href="#" class="thumbnail">
+	    				<img src="images/tinderlogo.jpeg">
+	    			</a>
+	    		</div>
+	    		<div class="col-xs-6 col-sm-6 col-md-3">
+	    			<a href="#" class="thumbnail">
+	    				<img src="images/tinderlogo.jpeg">
+	    			</a>
+	    		</div>
+	    	</div>
+	    </div>
+	<!-- </div> -->
     
   </body>
 </html>
