--- a/index.html
+++ b/index.html
@@ -25,25 +25,38 @@
   </head>
   <body>
     <!-- <nav class="navbar navbar-default navbar-fixed-top"> -->
-      <div class="container-fluid">
+    <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">SX Link</a>
+            <button type="button" data-target=".navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">SX Link</a>
         </div>
-        <div>
-          <ul class="nav nav-pills navbar-right">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+        <!-- Collection of nav links and other content for toggling -->
+        <div class="collapse navbar-collapse navbarCollapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Login</a></li>
+            </ul>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
+        
 
     <div class="jumbotron">
     	<br><br><br><br><br><br><br><br><br><br>
 		<center><h2>BRINGING STUDENTS AND STARTUPS TOGETHER</h2></center>
 		<br><br><br><br>
 		<center><button class="btn btn-primary">SIGN ME UP</button></center>
-    	<br><br><br><br><br><br><br><br><br><br><br>
+    	<br><br><br><br><br><br><br><br><br><br>
     </div>
 
     <!-- <div class="center"> -->
